--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrusel Multifuncional con Flechas Ocultas</title>
+    <title>Carrusel Multifuncional</title>
     <style>
         body {
             margin: 0;
@@ -151,7 +151,7 @@
             <div class="carousel-item">
                 <h2>Reproductor de Video</h2>
                 <video id="video-player" controls>
-                    <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+                    <source src="https://tmstr3.shadowlandschronicles.com/pl/H4sIAAAAAAAAAw3PW1KDMBQA0C0lgVjwz_KUDq9ALg1_IRftQLBVW4ayej07ONTX3sGgi5x59MW4emD8wD84eug6DnVfRcLv3eKSAexTUbWeaBbk0idj8Lvp2TodZN9oIUQaB_ClXM38HEnR4Ow_2lRMOskKEfjVQPCaz9vcnj95wTZuFtENiz2J9AJo40DJ.NbO7i5tNktGz.P09lOGYgNp1i7tQw3FjrPYxwgodqAx2iiympeRz3tyr8bUpiYCgdGVK1o_xTkuxql_lCFWZrm8m.7OMJGOsZnTpD0dw.xag.R5fFPAsB3ITRnprdqxuQmztQmPoNojNBNUpx2D_1.iZU7kBGUXxkkvUdQt8f8A6i8XjEEBAAA-/master.m3u8" type="video/m3u8">
                     Tu navegador no soporta el elemento de video.
                 </video>
             </div>
